# Personal-Bookmark

./: .gitignore  README.md  bookmarks.toml  checker.py  convert_bookmarks.py  generater.py  generater_v1.py  index.html  meta_scrapyer.py  pyproject.toml  requirements.txt
.github/workflows/: generate_html.yml
python/: checker.py
static/: all.css  preline.js
